SERVICES: fixe for arrow coming out of the container and causing the content to scroll horizontally.

--- a/source/styles/pages/_home.scss
+++ b/source/styles/pages/_home.scss
@@ -432,6 +432,7 @@
 	.services {
 		color: $WHITE;
 		background-color: #1E1E1E;
+		overflow: hidden;
 		padding: 42px percentage(0.5/12) 48px percentage(0.5/12);
 
 		@include min-screen($BREAKPOINT_NARROW){
